--- a/view-estimate.html
+++ b/view-estimate.html
@@ -135,7 +135,7 @@
          </div>
       </header>
 
-      <section class="all-check-out-wrap">
+      <section class="all-check-out-wrap view-estimate-sec">
          <div class="breadcrumb-sec">
             <div class="container large_container">
                <div class="breadcrumb-wrap">
@@ -171,129 +171,223 @@
                </div>
             </div>
 
-            <div class="your-cart">
-               <div class="container">
-                  <div class="your-cart-row-wrap">
-                     <div class="row">
-                        <div class="col-md-5">
-                           <div class="your-cart-item">
-                              <div class="your-cart-hd">
-                                 <h2>Your cart</h2>
-                              </div>
-                              <div class="your-cart-wrap">
-                                 <div class="your-cart-col">
-                                    <a href="#" class="your-cart-col-img">
-                                       <img src="images/your-cart-img1.png" alt="">
-                                    </a>
-                                    <div class="your-cart-col-text">
-                                       <a href="#" class="your-cart-name">Kitchen | 29.17SF</a>
-                                       <p>Details</p>
-                                       <div class="cart-text">Blue Flower</div>
-                                       <div class="cart-text">Polished | 3cm</div>
-                                    </div>
+
+            <div class="view-estimate-bottom">
+               <div class="container large_container">
+                  <div class="view-estimate">
+                     <div class="view-estimate-hd">
+                        <a href="#"><span><img src="images/edit-icon-white.svg" alt=""></span> Project Estimate</a>
+                     </div>
+                     <div class="view-estimate-informatin">
+                        <div class="view-estimate-informatin-flex">
+                           <div class="view-estimate-informatin-col">
+                              <h3>Provider</h3>
+                              <div class="view-estimate-informatin-item">
+                                 <div class="view-estimate-informatin-img">
+                                    <img src="images/provider-img.png" alt="">
                                  </div>
-                                 <div class="your-cart-col">
-                                    <a href="#" class="your-cart-col-img">
-                                       <img src="images/your-cart-img2.png" alt="">
-                                    </a>
-                                    <div class="your-cart-col-text">
-                                       <a href="#" class="your-cart-name">Bathroom | 29.17SF</a>
-                                       <p>Details</p>
-                                       <div class="cart-text">Blue Flower</div>
-                                       <div class="cart-text">Polished | 3cm</div>
-                                    </div>
+                                 <div class="view-estimate-informatin-cont">
+                                    <h4>Provider Name</h4>
+                                    <ul>
+                                       <li><img src="images/map-point.svg" alt=""><span>Lorem ipsum dolor ipsum ipsum 2589</span></li>
+                                       <li><img src="images/email-icon-black.svg" alt=""><a href="mailto:testy2113@mail.net">testy2113@mail.net</a></li>
+                                    </ul>
                                  </div>
                               </div>
                            </div>
-                        </div>
-                        <div class="col-md-7">
-                           <div class="payment-method">
-                              <form>
-                                 <div class="payment-method-hd">
-                                    <h3>Payment method</h3>
+                           <div class="view-estimate-informatin-col">
+                              <h3>Personal Informatin</h3>
+                              <div class="view-estimate-informatin-item">
+                                 <div class="view-estimate-informatin-cont view-estimate-informatin-cont-pdd-0">
+                                    <ul>
+                                       <li><img src="images/user.svg" alt=""><span>Personal information</span></li>
+                                       <li><img src="images/email-icon-black.svg" alt=""><a href="mailto:testy2113@mail.net">testy2113@mail.net</a></li>
+                                       <li><img src="images/phone-icon.svg" alt=""><a href="tel:98745 56123">98745 56123</a></li>
+                                    </ul>
                                  </div>
-                                 <div class="payment-method-option">
-                                    <div class="payment-method-option-img">
-                                       <img src="images/payment-method-option-im.png" alt="">
-                                    </div>
-                                    <div class="payment-method-bank">
-                                       <label>
-                                          <input type="radio" name="thickness" id="thickness1">
-                                          <span><img src="images/bank-img.svg" alt=""> Us bank account</span>
-                                        </label>
-                                    </div>
+                              </div>
+                           </div>
+                           <div class="view-estimate-informatin-col">
+                              <h3>Measurement</h3>
+                              <div class="view-estimate-informatin-item">
+                                 <div class="view-estimate-informatin-cont view-estimate-informatin-cont-pdd-0">
+                                    <ul>
+                                       <li><img src="images/measurement-icon.svg" alt=""><span>Measurement info</span></li>
+                                       <li><img src="images/size-icon.svg" alt=""><span>170S/F 45S/F</span></li>
+                                    </ul>
                                  </div>
-                                 <div class="select-item">
-                                    <select>
-                                       <option value="0">Secure, 1-click checkout with Link</option>
-                                       <option value="1">1</option>
-                                       <option value="2">2</option>
-                                       <option value="3">3</option>
-                                       <option value="4">4</option>
-                                       <option value="5">5</option>
-                                    </select>
-                                 </div>
-                                 <div class="payment-method-form">
-                                    <div class="payment-method-form-row">
-                                       <div class="payment-method-form-col">
-                                          <label>Card name</label>
-                                          <input type="text" placeholder="Jhonson Rose">
-                                       </div>
-                                       <div class="payment-method-form-col">
-                                          <label>Card number</label>
-                                          <input type="text" onkeypress="return isNumber(event)" placeholder="0000 0000 00">
-                                       </div>
-                                       <div class="payment-method-form-col">
-                                          <label>Expiration date</label>
-                                          <input type="text" onkeypress="return isNumber(event)" placeholder="0000 0000 00">
-                                       </div>
-                                       <div class="payment-method-form-col">
-                                          <label>CVC</label>
-                                          <input type="text" onkeypress="return isNumber(event)" placeholder="0000 0000 00">
-                                       </div>
-                                       <div class="payment-method-form-col">
-                                          <label>Country</label>
-                                          <select>
-                                             <option value="0">Lorem ipsum</option>
-                                             <option value="1">Afghanistan</option>
-                                             <option value="2">Albania</option>
-                                             <option value="3">Algeria</option>
-                                          </select>
-                                       </div>
-                                       <div class="payment-method-form-col">
-                                          <label>Zipcode</label>
-                                          <input type="text" onkeypress="return isNumber(event)" placeholder="1234567">
-                                       </div>
-                                    </div>
-                                    <div class="payment-method-divider"></div>
-                                    <div class="total-price">
-                                       <table>
-                                          <tr>
-                                            <td>Total due:</td>
-                                            <td><b>6,414.30</b></td>
-                                          </tr>
-                                          <tr>
-                                            <td>Shipping</td>
-                                            <td><b>Free</b></td>
-                                          </tr>
-                                          <tr class="total-valu">
-                                             <td><span class="total-price-number">Total</span></td>
-                                             <td><span class="total-price-number">6,414.30</span></td>
-                                           </tr>
-                                        </table>
-                                    </div>
-                                    <div class="payment-method-submit-btn">
-                                       <input type="submit" value="Pay now">
-                                    </div>
-                                 </div>
-                              </form>
+                              </div>
                            </div>
                         </div>
                      </div>
+
+                     <div class="estimate-table-wrap">
+                        <div class="estimate-table-hd">
+                           <h3>Estimate</h3>
+                        </div>
+
+                        <div class="stimate-table">
+                           <div class="stimate-table-top">
+                              <div class="stimate-table-col">
+                                 <h4>Area</h4>
+                              </div>
+                              <div class="stimate-table-col">
+                                 <h4>Items</h4>
+                              </div>
+                              <div class="stimate-table-col">
+                                 <h4>Description</h4>
+                              </div>
+                              <div class="stimate-table-col-qty">
+                                 <h4>Qty</h4>
+                              </div>
+                           </div>
+                           <div class="stimate-table-bottom">
+                              <div class="stimate-table-col-flex">
+                                 <div class="stimate-table-col-wrap">
+                                    <div class="stimate-table-img-text-wrp">
+                                       <div class="stimate-table-img">
+                                          <img src="images/stimate-table-img1.png" alt="">
+                                       </div>
+                                       <div class="stimate-table-text">
+                                          <h4>Kitchen</h4>
+                                          <p>Blue Flower <br> Granite 3cm | Polished</p>
+                                       </div>
+                                    </div>
+                                 </div>
+                                 <div class="stimate-table-col-wrap">
+                                    <div class="stimate-table-col-info">
+                                       <h4>Items:</h4>
+                                       <p>SF</p>
+                                       <p>Demo & Disposal</p>
+                                       <p>Finished Edging</p>
+                                    </div>
+                                 </div>
+                                 <div class="stimate-table-col-wrap">
+                                    <div class="stimate-table-col-info">
+                                       <h4>Descriptions:</h4>
+                                       <p>Total Area Square Footage</p>
+                                       <p>Natural/solid Surface</p>
+                                       <p>1/4 Beveled</p>
+                                    </div>
+                                 </div>
+                                 <div class="stimate-table-col-qty-wrap">
+                                    <div class="stimate-table-col-info">
+                                       <h4>Qty:</h4>
+                                       <p>29.17</p>
+                                       <p>29.17</p>
+                                       <p>15.63</p>
+                                    </div>
+                                 </div>
+                              </div>
+                              <div class="stimate-table-col-flex">
+                                 <div class="stimate-table-col-wrap">
+                                    <div class="stimate-table-img-text-wrp">
+                                       <div class="stimate-table-img">
+                                          <img src="images/stimate-table-img2.png" alt="">
+                                       </div>
+                                       <div class="stimate-table-text">
+                                          <h4>Kitchen</h4>
+                                          <p>Blue Flower <br> Granite 3cm | Polished</p>
+                                       </div>
+                                    </div>
+                                 </div>
+                                 <div class="stimate-table-col-wrap">
+                                    <div class="stimate-table-col-info">
+                                       <p>SF</p>
+                                       <p>Demo & Disposal</p>
+                                       <p>Finished Edging</p>
+                                    </div>
+                                 </div>
+                                 <div class="stimate-table-col-wrap">
+                                    <div class="stimate-table-col-info">
+                                       <p>Total Area Square Footage</p>
+                                       <p>Natural/solid Surface</p>
+                                       <p>1/4 Beveled</p>
+                                    </div>
+                                 </div>
+                                 <div class="stimate-table-col-qty-wrap">
+                                    <div class="stimate-table-col-info">
+                                       <p>29.17</p>
+                                       <p>29.17</p>
+                                       <p>15.63</p>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+
+                        </div>
+
+                        <div class="view-estimate-table">
+                           <table class="view-estimate-table-description">
+                              <thead>
+                                <tr>
+                                  <th>Description</th>
+                                  <th>Qty</th>
+                                  <th>Unit Price</th>
+                                  <th>Amount</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                 <tr>
+                                    <td>Material-Blue Flower (Polished) 3.0 cm - full Slab 126.0x63.0</td>
+                                    <td>2.0</td>
+                                    <td>$1,714.72</td>
+                                    <td>$3,429.43</td>
+                                  </tr>
+                                <tr>
+                                  <td>Fabrication and Installation - Granite (Per SF)</td>
+                                  <td>63.84</td>
+                                  <td>$30.00</td>
+                                  <td>$1,915.20</td>
+                                </tr>
+                                <tr>
+                                 <td>Demo - Natural/solid Surface (Per SF)</td>
+                                 <td>63.84</td>
+                                 <td>$7.00</td>
+                                 <td>$446.88</td>
+                               </tr>
+                               <tr>
+                                 <td>Edge Profile - 1/4 Beveled (Per LF)</td>
+                                 <td>35.63</td>
+                                 <td>$13.00</td>
+                                 <td>$463.19</td>
+                               </tr>
+                              </tbody>
+                              <tfoot>
+                                <table class="view-estimate-table-price">
+                                 <tbody>
+                                    <tr>
+                                       <td>Subtotal</td>
+                                       <td>$6,254.70</td>
+                                     </tr>
+                                     <tr>
+                                       <td>Service Fee</td>
+                                       <td>$159.60</td>
+                                     </tr>
+                                     <tr>
+                                       <td>Total</td>
+                                       <td>$6,414.30</td>
+                                     </tr>
+                                     <tr>
+                                       <td><b>Total</b></td>
+                                       <td><b>$6,414.30</b></td>
+                                     </tr>
+                                 </tbody>
+                                </table>
+                              </tfoot>
+                            </table>
+                        </div>
+                        <div class="view-estimate-buttom">
+                           <a href="#" class="btn-previous">Previous</a>
+                           <a href="#" class="btn-secure">Secure your material <img src="images/secure-img.svg" alt=""></a>
+                        </div>
+                     </div>
                   </div>
-   
                </div>
             </div>
+
+
+
          </div>
          <img src="images/check-out-overlay-img.png" class="check-out-overlay-img check-out-overlay-desktop" alt="">
          <img src="images/checkout-mobile-overlay.png" class="check-out-overlay-mobile" alt="">
