design-finalfile-work

--- a/single-category.html
+++ b/single-category.html
@@ -450,7 +450,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
@@ -489,7 +489,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
@@ -528,7 +528,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
@@ -567,7 +567,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
@@ -606,7 +606,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
@@ -645,7 +645,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
@@ -684,7 +684,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
@@ -723,7 +723,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
@@ -762,7 +762,7 @@
                                  </a>
                               </div>
                            </div>
-                           <button class="add-fev"></button>
+                           <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                            <div class="swiper-pagination"></div>
                         </div>
                         <div class="filetr-card-info">
