--- a/styleguide.html
+++ b/styleguide.html
@@ -146,52 +146,8 @@
          </div>
       </section>
 
-      <section class="check-out-sec">
-         <div class="container large_container">
-            <div class="check-out-wrap">
-               <div class="check-out-steps">
-                  <div class="c-step-box active ch-pre-active">
-                     <span class="c-step-number">1</span>
-                     <div class="c-step-name">Choose an Estimate</div>
-                  </div>
-                  <div class="c-step-box active ch-pre-active">
-                     <span class="c-step-number">2</span>
-                     <div class="c-step-name">Schedule Measurement</div>
-                  </div>
-                  <div class="c-step-box">
-                     <span class="c-step-number">3</span>
-                     <div class="c-step-name">Finalize Quote</div>
-                  </div>
-                  <div class="c-step-box">
-                     <span class="c-step-number">4</span>
-                     <div class="c-step-name">Arrange Install</div>
-                  </div>
-               </div>
-            </div>
-
-
-
-            <div class="view-estimate">
-               <div class="view-estimate-hd">
-                  <a href="#"><img src="images/edit-icon.svg" alt=""> Project Estimate</a>
-               </div>
-
-
-
-               <div class="view-estimate-info">
-                  <div class="view-estimate-info-col">
-                     <div class="view-estimate-info-item">
-                        <label>Provider</label>
-                        <div class="view-estimate-info-flex">
-                           
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-
-         </div>
-         <img src="images/check-out-overlay-img.png" class="check-out-overlay-img" alt="">
+      <section class="">
+         <div class=""></div>
       </section>
 
       <footer class="main_footer">
