--- a/view-estimate.html
+++ b/view-estimate.html
@@ -146,7 +146,6 @@
                </div>
             </div>
          </div>
-
          <div class="check-out-sec">
             <div class="container large_container">
                <div class="check-out-wrap">
@@ -170,8 +169,6 @@
                   </div>
                </div>
             </div>
-
-
             <div class="view-estimate-bottom">
                <div class="container large_container">
                   <div class="view-estimate">
@@ -196,13 +193,13 @@
                               </div>
                            </div>
                            <div class="view-estimate-informatin-col">
-                              <h3>Personal Informatin</h3>
+                              <h3>Personal Information</h3>
                               <div class="view-estimate-informatin-item">
                                  <div class="view-estimate-informatin-cont view-estimate-informatin-cont-pdd-0">
                                     <ul>
                                        <li><img src="images/user.svg" alt=""><span>Personal information</span></li>
                                        <li><img src="images/email-icon-black.svg" alt=""><a href="mailto:testy2113@mail.net">testy2113@mail.net</a></li>
-                                       <li><img src="images/phone-icon.svg" alt=""><a href="tel:98745 56123">98745 56123</a></li>
+                                       <li><img src="images/phone-icon.svg" alt=""><a href="tel:9874556123">98745 56123</a></li>
                                     </ul>
                                  </div>
                               </div>
@@ -220,12 +217,10 @@
                            </div>
                         </div>
                      </div>
-
                      <div class="estimate-table-wrap">
                         <div class="estimate-table-hd">
                            <h3>Estimate</h3>
                         </div>
-
                         <div class="stimate-table">
                            <div class="stimate-table-top">
                               <div class="stimate-table-col">
@@ -245,11 +240,11 @@
                               <div class="stimate-table-col-flex">
                                  <div class="stimate-table-col-wrap">
                                     <div class="stimate-table-img-text-wrp">
-                                       <div class="stimate-table-img">
-                                          <img src="images/stimate-table-img1.png" alt="">
-                                       </div>
+                                       <a href="#" class="stimate-table-img">
+                                       <img src="images/stimate-table-img1.png" alt="">
+                                       </a>
                                        <div class="stimate-table-text">
-                                          <h4>Kitchen</h4>
+                                          <a href="#" class="stimate-prod-name">Kitchen</a>
                                           <p>Blue Flower <br> Granite 3cm | Polished</p>
                                        </div>
                                     </div>
@@ -282,17 +277,18 @@
                               <div class="stimate-table-col-flex">
                                  <div class="stimate-table-col-wrap">
                                     <div class="stimate-table-img-text-wrp">
-                                       <div class="stimate-table-img">
-                                          <img src="images/stimate-table-img2.png" alt="">
-                                       </div>
+                                       <a href="#" class="stimate-table-img">
+                                       <img src="images/stimate-table-img2.png" alt="">
+                                       </a>
                                        <div class="stimate-table-text">
-                                          <h4>Kitchen</h4>
+                                          <a href="#" class="stimate-prod-name">Bathroom</a>
                                           <p>Blue Flower <br> Granite 3cm | Polished</p>
                                        </div>
                                     </div>
                                  </div>
                                  <div class="stimate-table-col-wrap">
                                     <div class="stimate-table-col-info">
+                                       <h4>Items:</h4>
                                        <p>SF</p>
                                        <p>Demo & Disposal</p>
                                        <p>Finished Edging</p>
@@ -300,6 +296,7 @@
                                  </div>
                                  <div class="stimate-table-col-wrap">
                                     <div class="stimate-table-col-info">
+                                       <h4>Descriptions:</h4>
                                        <p>Total Area Square Footage</p>
                                        <p>Natural/solid Surface</p>
                                        <p>1/4 Beveled</p>
@@ -307,6 +304,7 @@
                                  </div>
                                  <div class="stimate-table-col-qty-wrap">
                                     <div class="stimate-table-col-info">
+                                       <h4>Qty:</h4>
                                        <p>29.17</p>
                                        <p>29.17</p>
                                        <p>15.63</p>
@@ -314,18 +312,16 @@
                                  </div>
                               </div>
                            </div>
-
                         </div>
-
                         <div class="view-estimate-table">
                            <table class="view-estimate-table-description">
                               <thead>
-                                <tr>
-                                  <th>Description</th>
-                                  <th>Qty</th>
-                                  <th>Unit Price</th>
-                                  <th>Amount</th>
-                                </tr>
+                                 <tr>
+                                    <th>Description</th>
+                                    <th>Qty</th>
+                                    <th>Unit Price</th>
+                                    <th>Amount</th>
+                                 </tr>
                               </thead>
                               <tbody>
                                  <tr>
@@ -333,49 +329,47 @@
                                     <td>2.0</td>
                                     <td>$1,714.72</td>
                                     <td>$3,429.43</td>
-                                  </tr>
-                                <tr>
-                                  <td>Fabrication and Installation - Granite (Per SF)</td>
-                                  <td>63.84</td>
-                                  <td>$30.00</td>
-                                  <td>$1,915.20</td>
-                                </tr>
-                                <tr>
-                                 <td>Demo - Natural/solid Surface (Per SF)</td>
-                                 <td>63.84</td>
-                                 <td>$7.00</td>
-                                 <td>$446.88</td>
-                               </tr>
-                               <tr>
-                                 <td>Edge Profile - 1/4 Beveled (Per LF)</td>
-                                 <td>35.63</td>
-                                 <td>$13.00</td>
-                                 <td>$463.19</td>
-                               </tr>
+                                 </tr>
+                                 <tr>
+                                    <td>Fabrication and Installation - Granite (Per SF)</td>
+                                    <td>63.84</td>
+                                    <td>$30.00</td>
+                                    <td>$1,915.20</td>
+                                 </tr>
+                                 <tr>
+                                    <td>Demo - Natural/solid Surface (Per SF)</td>
+                                    <td>63.84</td>
+                                    <td>$7.00</td>
+                                    <td>$446.88</td>
+                                 </tr>
+                                 <tr>
+                                    <td>Edge Profile - 1/4 Beveled (Per LF)</td>
+                                    <td>35.63</td>
+                                    <td>$13.00</td>
+                                    <td>$463.19</td>
+                                 </tr>
                               </tbody>
-                              <tfoot>
-                                <table class="view-estimate-table-price">
-                                 <tbody>
-                                    <tr>
-                                       <td>Subtotal</td>
-                                       <td>$6,254.70</td>
-                                     </tr>
-                                     <tr>
-                                       <td>Service Fee</td>
-                                       <td>$159.60</td>
-                                     </tr>
-                                     <tr>
-                                       <td>Total</td>
-                                       <td>$6,414.30</td>
-                                     </tr>
-                                     <tr>
-                                       <td><b>Total</b></td>
-                                       <td><b>$6,414.30</b></td>
-                                     </tr>
-                                 </tbody>
-                                </table>
-                              </tfoot>
-                            </table>
+                           </table>
+                           <table class="view-estimate-table-price">
+                              <tbody>
+                                 <tr>
+                                    <td>Subtotal</td>
+                                    <td>$6,254.70</td>
+                                 </tr>
+                                 <tr>
+                                    <td>Service Fee</td>
+                                    <td>$159.60</td>
+                                 </tr>
+                                 <tr>
+                                    <td>Total</td>
+                                    <td>$6,414.30</td>
+                                 </tr>
+                                 <tr>
+                                    <td><b>Total</b></td>
+                                    <td><b>$6,414.30</b></td>
+                                 </tr>
+                              </tbody>
+                           </table>
                         </div>
                         <div class="view-estimate-buttom">
                            <a href="#" class="btn-previous">Previous</a>
@@ -385,9 +379,6 @@
                   </div>
                </div>
             </div>
-
-
-
          </div>
          <img src="images/check-out-overlay-img.png" class="check-out-overlay-img check-out-overlay-desktop" alt="">
          <img src="images/checkout-mobile-overlay.png" class="check-out-overlay-mobile" alt="">
