--- a/search-result.html
+++ b/search-result.html
@@ -229,8 +229,6 @@
                      </a>
                   </div>
                </div>
-
-
                <div class="js-card-next"></div>
                <div class="js-card-prev"></div>
             </div>
@@ -394,7 +392,6 @@
                            </div>
                         </div>
                      </div>
-
                   </div>
                </div>
                <div class="filetr-col-right">
@@ -444,7 +441,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -483,7 +480,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -522,7 +519,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -561,7 +558,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -600,7 +597,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -639,7 +636,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -678,7 +675,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -717,7 +714,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -756,7 +753,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -795,7 +792,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -834,7 +831,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
@@ -873,7 +870,7 @@
                                        </a>
                                     </div>
                                  </div>
-                                 <button class="add-fev"></button>
+                                 <button class="add-fev"><img src="images/add-fev.png" alt=""></button>
                                  <div class="swiper-pagination"></div>
                               </div>
                               <div class="filetr-card-info">
